--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,26 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Usi Diamond Github Page</title>
-    <base href="/" />
+    <meta property="title" content="Trans Rally" />
+    <meta
+      property="description"
+      content="We are Trans Rally, a member-owned community organization whose goal is to provide substantive benefits for our members. We are currently undergoing a transition to incorporate as a non-profit. Rally together with us!"
+    />
+    <meta
+      property="image"
+      content="https://github.com/transrally/transrally.github.io/blob/25e2917185754e1ffa024d1a7daac545e27d7a0f/src/media/Trans%20Rally%20Logo.png"
+    />
+    <meta property="url" content="https://transrally.org" />
+    <title>Trans Rally</title>
+    <meta
+      name="description"
+      content="We are Trans Rally, a member-owned community organization whose goal is to provide substantive benefits for our members. We are currently undergoing a transition to incorporate as a non-profit. Rally together with us!"
+    />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <app-root></app-root>
+    <app-root>Loading...</app-root>
   </body>
 </html>
